--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
         </thead>
         <tbody></tbody>
       </table>
+      <ol class="list">
+          
+      </ol>
     </div>
     <script>
       window.onload = async function () {
@@ -67,13 +70,19 @@
             let user = await response.json();
             console.log(user);
             let tbody = document.querySelector("tbody");
+            let li = document.querySelector('.list');
             for (let i = 0; i < user.length; i++) {
               tbody.innerHTML += `<tr>
             <td>${user[i].name}</td>
             <td>${user[i].username}</td>
             <td>${user[i].email}</td>
           </tr>`;
-            }
+          
+          li.innerHTML += `
+          <li>${user[i].name}</li>
+
+          `
+         }
           }
         } catch (err) {
           console.log(err);
