--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
         </thead>
         <tbody></tbody>
       </table>
-      <ol class="list">
-          
-      </ol>
+      <ol class="list"></ol>
     </div>
     <script>
       window.onload = async function () {
+        let addresses = [];
+
         try {
           let response = await fetch(
             "https://jsonplaceholder.typicode.com/users"
@@ -70,19 +70,28 @@
             let user = await response.json();
             console.log(user);
             let tbody = document.querySelector("tbody");
-            let li = document.querySelector('.list');
+            let li = document.querySelector(".list");
             for (let i = 0; i < user.length; i++) {
               tbody.innerHTML += `<tr>
             <td>${user[i].name}</td>
             <td>${user[i].username}</td>
             <td>${user[i].email}</td>
           </tr>`;
-          
-          li.innerHTML += `
+
+              li.innerHTML += `
           <li>${user[i].name}</li>
 
-          `
-         }
+          `;
+            }
+            for (let i = 0; i < user.length; i++) {
+              addresses.push([
+                user[i].address.street,
+                user[i].address.suite,
+                user[i].address.city,
+                user[i].address.zipcode,
+              ]);
+              console.log(addresses);
+            }
           }
         } catch (err) {
           console.log(err);
