--- a/index.html
+++ b/index.html
@@ -57,11 +57,12 @@
         <tbody></tbody>
       </table>
       <ol class="list"></ol>
+      <button type="button" class="btn btn-primary" id="button1">Primary</button>
     </div>
     <script>
       window.onload = async function () {
         let addresses = [];
-
+        let name = [];
         try {
           let response = await fetch(
             "https://jsonplaceholder.typicode.com/users"
@@ -92,6 +93,17 @@
               ]);
               console.log(addresses);
             }
+            for(let i = 0; i < user.length; i++){
+              name.push(user[i].name)
+             
+            }
+
+            let button1 = document.querySelector('#button1');
+              button1.addEventListener('click', function(){
+                let sorted = name.sort();
+                console.log(sorted);
+          
+              })
           }
         } catch (err) {
           console.log(err);
